[main] Fixed line numbers spacing in Code

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,7 @@
     .line {
       &::before {
         counter-increment: step;
-        @apply mr-[1ch] inline-block border-transparent text-right text-neutral-600 dark:text-neutral-400 content-[counter(step)];
+        @apply mr-[2ch] w-[2ch] inline-block border-transparent text-right text-neutral-600 dark:text-neutral-400 content-[counter(step)];
       }
     }
   }
